Fixed css files. The path to the graph has been changed in html

--- a/UI/css/header.css
+++ b/UI/css/header.css
@@ -10,7 +10,7 @@
     align-items: center;
 
     background-color: var(--black);
-    background-image: url('./../img/header-bg.png');
+    background-image: url('./../img/png/header-bg.png');
     background-repeat: no-repeat;
     background-size: auto;
     background-position: center center;
