--- a/UI/css/navigation.css
+++ b/UI/css/navigation.css
@@ -48,7 +48,8 @@
     column-gap: 40px;
     font-size: 16px;
     font-weight: 500;
-    font-family: "Poppins", sans-serif; 
+    /* font-family: "Poppins", sans-serif;  */
+    
 }
 
 
