--- a/UI/css/contacts.css
+++ b/UI/css/contacts.css
@@ -1,38 +1,37 @@
-/* Contacts */
 
 .contacts {
-    display: grid; 
-    grid-template-columns: repeat(2, 1fr); 
-
-    grid-column-gap: 15px; 
-    grid-row-gap: 30px; 
-    
-    justify-items: center; 
+    display: flex;
+    flex-wrap: wrap; 
+    gap: 25px; 
+    justify-content: center; 
 }
 
 
 .contact {
-    flex: 0 1 calc(50% - 15px);
-    max-width: 470px;
-
-    background-color: var(--project-card-bg);
+    width: calc(25% - 25px); 
+    max-width: 490px; 
+    background-color: var(--black);
     box-shadow: var(--box-shadow);
-
     border-radius: 10px;
     border: 1px solid var(--black-border);
+    overflow: hidden;
 }
 
 .contact__img {
+    width: 100%;
+    height: auto;
     border-radius: 10px;
 }
 
 .contact__title {
-    padding: 15px 20px 25px;
+    padding: 10px 20px;
     text-align: center;
-
     font-weight: 400;
     font-size: 16px;
     line-height: 1.3;
+    color: var(--white);
+}
 
-    color: var(--project-card-text);
+.contacts-page .title-1 {
+    color: #fff;
 }
