--- a/UI/css/media.css
+++ b/UI/css/media.css
@@ -4,6 +4,18 @@
     }
 }
 
+/* Медиа-запросы для уменьшения ширины экрана */
+@media (max-width: 1200px) {
+    .contact {
+        width: calc(50% - 25px); 
+    }
+}
+
+@media (max-width: 768px) {
+    .contact {
+        width: calc(100% - 25px);
+    }
+}
 
 @media (max-width: 620px){
 
